# supabasemm-server

./: Cargo.toml
src/: main.rs
src/handlers/: mod.rs  test_handler.rs
src/handlers/migrate/: json_diff.rs  mod.rs  preview_handler.rs
src/handlers/oauth/: callback_handler.rs  login_handler.rs  mod.rs
src/models/: app_config.rs  migrate.rs  mod.rs  oauth.rs
