[package]
name = "supabasemm-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
oauth2 = "5.0.0"
reqwest = { version = "0.12.21", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = "0.3.41"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tower-sessions = "0.14.0"
